@@ -1,17 +1,0 @@
-This package was debianized by Christian Leutloff <leutloff@debian.org> on
-Sat, 21 Apr 2001 16:47:23 +0200.
-
-It was downloaded from the official CppUnit Homepage at:
-http://cppunit.sourceforge.net
-
-Upstream Author(s): 
-
-Michael Feathers <mfeathers@objectmentor.com> 
-Jerome Lacoste <lacostej@altern.org>          
-E. Sommerlade <eric@sommerla.de>              
-Baptiste Lepilleur <gaiacrtn@free.fr>
-Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
-
-Copyright: LGPL
-
-
