@@ -1,11 +1,0 @@
-Document: cppunit
-Title: CppUnit Cookbook
-Author: Michael Feathers and others
-Abstract: A short cookbook to help the user getting started with CppUnit.
-Section: devel
-
-Format: HTML
-Index: /usr/share/doc/cppunit/html/index.html
-Files: /usr/share/doc/cppunit/html/*.html
-
-  
